--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,10 +26,14 @@ jobs:
           name: Install AWS CLI
           command: |
             sudo rm /etc/apt/sources.list
-            echo "deb http://archive.debian.org/debian/ jessie-backports main" | sudo tee -a /etc/apt/sources.list
-            echo "deb-src http://archive.debian.org/debian/ jessie-backports main" | sudo tee -a /etc/apt/sources.list
-            echo "Acquire::Check-Valid-Until false;" | sudo tee -a /etc/apt/apt.conf.d/10-nocheckvalid
-            echo 'Package: *\nPin: origin "archive.debian.org"\nPin-Priority: 500' | sudo tee -a /etc/apt/preferences.d/10-archive-pin
+            echo "deb http://archive.debian.org/debian/ jessie-backports main"
+            sudo tee -a /etc/apt/sources.list
+            echo "deb-src http://archive.debian.org/debian/ jessie-backports main"
+            sudo tee -a /etc/apt/sources.list
+            echo "Acquire::Check-Valid-Until false;"
+            sudo tee -a /etc/apt/apt.conf.d/10-nocheckvalid
+            echo 'Package: *\nPin: origin "archive.debian.org"\nPin-Priority: 500'
+            sudo tee -a /etc/apt/preferences.d/10-archive-pin
             apt-get update
             apt-get install -y awscli
       - run:
