--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: node:9.9.0
+      - image: node:lts
     working_directory: ~/cloudpro.limited
     steps:
       - checkout
@@ -25,11 +25,6 @@ jobs:
       - run:
           name: Install AWS CLI
           command: |
-            rm /etc/apt/sources.list
-            echo "deb http://archive.debian.org/debian/ jessie-backports main" | tee -a /etc/apt/sources.list
-            echo "deb-src http://archive.debian.org/debian/ jessie-backports main" | tee -a /etc/apt/sources.list
-            echo "Acquire::Check-Valid-Until false;" | tee -a /etc/apt/apt.conf.d/10-nocheckvalid
-            echo 'Package: *\nPin: origin "archive.debian.org"\nPin-Priority: 500' | tee -a /etc/apt/preferences.d/10-archive-pin
             apt-get update
             apt-get install -y awscli
       - run:
