change node container version

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: node:lts
+      - image: node:11.13.0
     working_directory: ~/cloudpro.limited
     steps:
       - checkout
